updated ftp code to download files

--- a/drug_analysis.ipynb
+++ b/drug_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -57,6 +57,7 @@
     "        fileName = f\"{drug}_ALL.txt\"\n",
     "        # use ftp to download that file from massive (is this possible?? or only thru command line?)\n",
     "        \n",
+    "        \n",
     "    \n",
     "    # start with just 1 drug type and try to combine them all (see code below) "
    ]
@@ -70,7 +71,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/\n"
+      "curr diectory: \n",
+      "-rw-rw-r--    1 1200     1200      3859444 Aug 16  2023 ACY738_ALL.txt\n",
+      "-rw-rw-r--    1 1200     1200       719933 Aug 16  2023 ACY738_down, low confidence.txt\n",
+      "-rw-rw-r--    1 1200     1200       123804 Aug 16  2023 ACY738_down.txt\n",
+      "-rw-rw-r--    1 1200     1200      1923069 Aug 16  2023 ACY738_non-regulated.txt\n",
+      "-rw-rw-r--    1 1200     1200       153580 Aug 16  2023 ACY738_up, low confidence.txt\n",
+      "-rw-rw-r--    1 1200     1200        16422 Aug 16  2023 ACY738_up.txt\n",
+      ".pred_class\tidentifier\tdrug\tgene\tslope\tbottom\ttop\tinflection\tIC50\tstdIC50\tdown\tr2\trse\tbic\taic\tAUC\tNormalized_Intensity_0\tNormalized_Intensity_1\tNormalized_Intensity_10\tNormalized_Intensity_100\tNormalized_Intensity_1000\tNormalized_Intensity_10000\tUnique_Peptides_0\tUnique_Peptides_1\tUnique_Peptides_10\tUnique_Peptides_100\tUnique_Peptides_1000\tUnique_Peptides_10000\tDescription\tMean_Intensity\tGene names\tDMSO_percentile\tMAD\tbeginningOfCurve\tendOfCurve\tlinearSlope\tR2_Bins\n",
+      "\n",
+      "up\tACY738:Q9NVV5\tACY738\tQ9NVV5\t-5.32494435726834\t0.250050395464489\t35.4889018364399\t1023.54598206943\t1023.54598206943\t197.206576121085\tFALSE\t0.999298380484414\t0.612402566344609\t13.5100009177138\t14.5512035715736\t7.22871755941069\t1\t0\t0\t0\t16.7791313134279\t35.4883969415251\t1\t1\t0\t1\t1\t1\tAndrogen-induced gene 1 protein\t973197\tAIG1\t0.0367238768298839\t0.250050395813054\t0.250050395464489\t35.4887130824332\t6.36512510422598\tR_Bin_1\n",
+      "\n"
      ]
     }
    ],
@@ -79,20 +90,255 @@
     "\n",
     "ftp = FTP(\"massive-ftp.ucsd.edu\")\n",
     "ftp.login()\n",
+    "    \n",
+    "ftp.cwd('/v06/MSV000093659/other/Dose response data - Jurkat proteome/ACY738/TXTs_Classified')\n",
+    "    # only want Dose response data - Jurkat proteome \n",
+    "    # maybe double check this w/ the paper but we're pretty sure!\n",
+    "print(\"curr diectory: \")\n",
+    "ftp.retrlines('LIST')\n",
     "\n",
-    "\n"
+    "fileName = 'ACY738_ALL.txt' #could also turn this into filePath and put the whole path in. would prob be better for getting all drugs instead of changing directories\n",
+    "\n",
+    "#write the file in binary mode\n",
+    "with open(fileName, \"wb\") as file:\n",
+    "    #download the file \"RETR fileName\"\n",
+    "    ftp.retrbinary(f\"RETR {fileName}\", file.write)\n",
+    "ftp.quit()\n",
+    "\n",
+    "\n",
+    "with open(fileName, \"r\") as dataFile:\n",
+    "    one = dataFile.readline()\n",
+    "    print(one)\n",
+    "    two = dataFile.readline()\n",
+    "    print(two)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>.pred_class</th>\n",
+       "      <th>identifier</th>\n",
+       "      <th>drug</th>\n",
+       "      <th>gene</th>\n",
+       "      <th>slope</th>\n",
+       "      <th>bottom</th>\n",
+       "      <th>top</th>\n",
+       "      <th>inflection</th>\n",
+       "      <th>IC50</th>\n",
+       "      <th>stdIC50</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Unique_Peptides_10000</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Mean_Intensity</th>\n",
+       "      <th>Gene names</th>\n",
+       "      <th>DMSO_percentile</th>\n",
+       "      <th>MAD</th>\n",
+       "      <th>beginningOfCurve</th>\n",
+       "      <th>endOfCurve</th>\n",
+       "      <th>linearSlope</th>\n",
+       "      <th>R2_Bins</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>up</td>\n",
+       "      <td>Selisistat:Q8WUM9</td>\n",
+       "      <td>Selisistat</td>\n",
+       "      <td>Q8WUM9</td>\n",
+       "      <td>-2.354844</td>\n",
+       "      <td>0.331634</td>\n",
+       "      <td>74.705564</td>\n",
+       "      <td>482.677340</td>\n",
+       "      <td>482.677340</td>\n",
+       "      <td>27.469105</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Sodium-dependent phosphate transporter 1</td>\n",
+       "      <td>9.221678e+06</td>\n",
+       "      <td>SLC20A1</td>\n",
+       "      <td>0.112204</td>\n",
+       "      <td>0.167401</td>\n",
+       "      <td>0.331634</td>\n",
+       "      <td>74.646504</td>\n",
+       "      <td>16.012714</td>\n",
+       "      <td>R_Bin_1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>non-regulated</td>\n",
+       "      <td>Selisistat:Q9Y236</td>\n",
+       "      <td>Selisistat</td>\n",
+       "      <td>Q9Y236</td>\n",
+       "      <td>-22.579842</td>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>54.446028</td>\n",
+       "      <td>423.775423</td>\n",
+       "      <td>423.775423</td>\n",
+       "      <td>450348.103930</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Oxidative stress-induced growth inhibitor 2</td>\n",
+       "      <td>2.798953e+06</td>\n",
+       "      <td>OSGIN2</td>\n",
+       "      <td>0.039233</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>54.446028</td>\n",
+       "      <td>11.963733</td>\n",
+       "      <td>R_Bin_1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>up</td>\n",
+       "      <td>Selisistat:Q9H7D0</td>\n",
+       "      <td>Selisistat</td>\n",
+       "      <td>Q9H7D0</td>\n",
+       "      <td>-6.285658</td>\n",
+       "      <td>0.249995</td>\n",
+       "      <td>26.991495</td>\n",
+       "      <td>886.482768</td>\n",
+       "      <td>886.482768</td>\n",
+       "      <td>2404.691522</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Dedicator of cytokinesis protein 5</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>DOCK5</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.249995</td>\n",
+       "      <td>0.249995</td>\n",
+       "      <td>26.991489</td>\n",
+       "      <td>5.409196</td>\n",
+       "      <td>R_Bin_1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>up</td>\n",
+       "      <td>Selisistat:Q86XS8</td>\n",
+       "      <td>Selisistat</td>\n",
+       "      <td>Q86XS8</td>\n",
+       "      <td>-6.271295</td>\n",
+       "      <td>0.779339</td>\n",
+       "      <td>16.172136</td>\n",
+       "      <td>759.206283</td>\n",
+       "      <td>759.206283</td>\n",
+       "      <td>1634.385376</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>E3 ubiquitin-protein ligase RNF130</td>\n",
+       "      <td>2.942998e+07</td>\n",
+       "      <td>RNF130</td>\n",
+       "      <td>0.313866</td>\n",
+       "      <td>0.159590</td>\n",
+       "      <td>0.779339</td>\n",
+       "      <td>16.172134</td>\n",
+       "      <td>3.222920</td>\n",
+       "      <td>R_Bin_1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>up</td>\n",
+       "      <td>Selisistat:P41223</td>\n",
+       "      <td>Selisistat</td>\n",
+       "      <td>P41223</td>\n",
+       "      <td>-7.037482</td>\n",
+       "      <td>1.488505</td>\n",
+       "      <td>12.337704</td>\n",
+       "      <td>3606.984370</td>\n",
+       "      <td>3606.984370</td>\n",
+       "      <td>29949.511977</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Protein BUD31 homolog</td>\n",
+       "      <td>8.161677e+07</td>\n",
+       "      <td>BUD31</td>\n",
+       "      <td>0.509137</td>\n",
+       "      <td>0.174464</td>\n",
+       "      <td>1.488505</td>\n",
+       "      <td>12.329416</td>\n",
+       "      <td>1.517899</td>\n",
+       "      <td>R_Bin_1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 37 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     .pred_class         identifier        drug    gene      slope    bottom  \\\n",
+       "0             up  Selisistat:Q8WUM9  Selisistat  Q8WUM9  -2.354844  0.331634   \n",
+       "1  non-regulated  Selisistat:Q9Y236  Selisistat  Q9Y236 -22.579842  0.250000   \n",
+       "2             up  Selisistat:Q9H7D0  Selisistat  Q9H7D0  -6.285658  0.249995   \n",
+       "3             up  Selisistat:Q86XS8  Selisistat  Q86XS8  -6.271295  0.779339   \n",
+       "4             up  Selisistat:P41223  Selisistat  P41223  -7.037482  1.488505   \n",
+       "\n",
+       "         top   inflection         IC50        stdIC50  ...  \\\n",
+       "0  74.705564   482.677340   482.677340      27.469105  ...   \n",
+       "1  54.446028   423.775423   423.775423  450348.103930  ...   \n",
+       "2  26.991495   886.482768   886.482768    2404.691522  ...   \n",
+       "3  16.172136   759.206283   759.206283    1634.385376  ...   \n",
+       "4  12.337704  3606.984370  3606.984370   29949.511977  ...   \n",
+       "\n",
+       "   Unique_Peptides_10000                                  Description  \\\n",
+       "0                      1     Sodium-dependent phosphate transporter 1   \n",
+       "1                      1  Oxidative stress-induced growth inhibitor 2   \n",
+       "2                      1           Dedicator of cytokinesis protein 5   \n",
+       "3                      1           E3 ubiquitin-protein ligase RNF130   \n",
+       "4                      3                        Protein BUD31 homolog   \n",
+       "\n",
+       "   Mean_Intensity  Gene names  DMSO_percentile       MAD  beginningOfCurve  \\\n",
+       "0    9.221678e+06     SLC20A1         0.112204  0.167401          0.331634   \n",
+       "1    2.798953e+06      OSGIN2         0.039233  0.500000          0.250000   \n",
+       "2    0.000000e+00       DOCK5         0.000000  0.249995          0.249995   \n",
+       "3    2.942998e+07      RNF130         0.313866  0.159590          0.779339   \n",
+       "4    8.161677e+07       BUD31         0.509137  0.174464          1.488505   \n",
+       "\n",
+       "   endOfCurve  linearSlope  R2_Bins  \n",
+       "0   74.646504    16.012714  R_Bin_1  \n",
+       "1   54.446028    11.963733  R_Bin_1  \n",
+       "2   26.991489     5.409196  R_Bin_1  \n",
+       "3   16.172134     3.222920  R_Bin_1  \n",
+       "4   12.329416     1.517899  R_Bin_1  \n",
+       "\n",
+       "[5 rows x 37 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# combining tables for just 2 drugs (SIRT inhibitors)\n",
     "\n",
     "selis = pd.read_csv(\"Selisistat_ALL.txt\", delimiter = \"\\t\")\n",
     "srt = pd.read_csv(\"SRT2104_ALL.txt\", delimiter = \"\\t\")\n",
+    "\n",
+    "selis.head()\n",
     "\n"
    ]
   },
