making ic50 tables by type

--- a/drug_analysis.ipynb
+++ b/drug_analysis.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,14 +89,14 @@
     "meanIntensityMatrix.columns = meanIntensityMatrix.columns.str.removesuffix(\"_Mean_Intensity\")\n",
     "\n",
     "# make empty dict for dataframes by type\n",
-    "# keys: drug types, values: dataframes of mean intensity vals for drugs in that type\n",
+    "# keys: drug types, values: dfs of mean intensity vals for drugs in that type\n",
     "meansByDrugType = {}\n",
     "\n",
     "# loop through the dictionary of types and drugs\n",
     "for type, drugNames in drugTypes.items():\n",
     "    # select columns in the combined matrix for all the drugs in that type\n",
     "    typeSubset = meanIntensityMatrix[drugNames]\n",
-    "    # save those columns to the dictionary of types/values\n",
+    "    # save those columns to the dict of types/values\n",
     "    meansByDrugType[type] = typeSubset\n",
     "\n",
     "# # print out meansByDrugType dictionary:\n",
@@ -106,6 +106,43 @@
     "# save the df for each type as a csv \n",
     "for type, df in meansByDrugType.items():\n",
     "    df.to_csv(f\"Mean_Intensity_Matrix_{type}.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make separate files for ic50 values based on drug types\n",
+    "# OR, use the table from salma —> go thru the dict by drug type, select all the columns for the drugs in that type and\n",
+    "    # save them in a new data frame with the name of that drug type. \n",
+    "\n",
+    "# get combined matrix of values\n",
+    "ic50Matrix = pd.read_csv(\"ic50_matrix.csv\")\n",
+    "\n",
+    "# make empty dict for dataframes by type\n",
+    "# keys: drug types, values: dfs of ic50 vals for drugs in that type\n",
+    "ic50sByDrugType = {}\n",
+    "\n",
+    "#read in supplementary table\n",
+    "# drugInfo = pd.read_csv(\"Drug_Info_Supp_Table.csv\")\n",
+    "drugInfoWithUnderscores = drugInfo\n",
+    "drugInfoWithUnderscores[\"Drug\"] = drugInfo[\"Drug\"].str.replace(' ', '_')\n",
+    "\n",
+    "#group all drugs by their type and turn into dictionary\n",
+    "drugTypesWithUnderscores = drugInfoWithUnderscores.groupby(\"Type\")[\"Drug\"].apply(list).to_dict()\n",
+    "\n",
+    "# loop through the dictionary of types and drugs\n",
+    "for type, drugNames in drugTypesWithUnderscores.items():\n",
+    "    # select columns in the combined matrix for all the drugs in that type\n",
+    "    df = ic50Matrix[drugNames]\n",
+    "    # save those columns to the dict of types/values\n",
+    "    ic50sByDrugType[type] = df\n",
+    "\n",
+    "# save the df for each type as a csv \n",
+    "for type, df in ic50sByDrugType.items():\n",
+    "    df.to_csv(f\"ic50_Matrix_{type}.csv\", index = False)"
    ]
   }
  ],
