--- a/random_test_code.ipynb
+++ b/random_test_code.ipynb
@@ -466,6 +466,97 @@
     "\n",
     "ftp.quit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make separate files for mean intensity values based on drug types \n",
+    "\n",
+    "# get combined matrix of values and rename columns to just be the drug names\n",
+    "meanIntensityMatrix = combined\n",
+    "meanIntensityMatrix.columns = meanIntensityMatrix.columns.str.removesuffix(\"_Mean_Intensity\")\n",
+    "\n",
+    "# make empty dict for dataframes by type\n",
+    "# keys: drug types, values: dfs of mean intensity vals for drugs in that type\n",
+    "meansByDrugType = {}\n",
+    "\n",
+    "# loop through the dictionary of types and drugs\n",
+    "for type, drugNames in drugTypes.items():\n",
+    "    # select columns in the combined matrix for all the drugs in that type\n",
+    "    typeSubset = meanIntensityMatrix[drugNames]\n",
+    "    # save those columns to the dict of types/values\n",
+    "    meansByDrugType[type] = typeSubset\n",
+    "\n",
+    "# # print out meansByDrugType dictionary:\n",
+    "# for type, df in meansByDrugType.items():\n",
+    "#     print(f\"type: {type}\\n{df.head()}\")\n",
+    "\n",
+    "# save the df for each type as a csv \n",
+    "for type, df in meansByDrugType.items():\n",
+    "    df.to_csv(f\"Mean_Intensity_Matrix_{type}.csv\", index = False)\n",
+    "\n",
+    "\n",
+    "# make separate files for ic50 values based on drug types\n",
+    "# OR, use the table from salma —> go thru the dict by drug type, select all the columns for the drugs in that type and\n",
+    "    # save them in a new data frame with the name of that drug type. \n",
+    "\n",
+    "# get combined matrix of values\n",
+    "ic50Matrix = pd.read_csv(\"ic50_matrix.csv\")\n",
+    "\n",
+    "# make empty dict for dataframes by type\n",
+    "# keys: drug types, values: dfs of ic50 vals for drugs in that type\n",
+    "ic50sByDrugType = {}\n",
+    "\n",
+    "#read in supplementary table\n",
+    "# drugInfo = pd.read_csv(\"Drug_Info_Supp_Table.csv\")\n",
+    "drugInfoWithUnderscores = drugInfo\n",
+    "drugInfoWithUnderscores[\"Drug\"] = drugInfo[\"Drug\"].str.replace(' ', '_')\n",
+    "\n",
+    "#group all drugs by their type and turn into dictionary\n",
+    "drugTypesWithUnderscores = drugInfoWithUnderscores.groupby(\"Type\")[\"Drug\"].apply(list).to_dict()\n",
+    "\n",
+    "# loop through the dictionary of types and drugs\n",
+    "for type, drugNames in drugTypesWithUnderscores.items():\n",
+    "    # select columns in the combined matrix for all the drugs in that type\n",
+    "    df = ic50Matrix[drugNames]\n",
+    "    # save those columns to the dict of types/values\n",
+    "    ic50sByDrugType[type] = df\n",
+    "\n",
+    "# save the df for each type as a csv \n",
+    "for type, df in ic50sByDrugType.items():\n",
+    "    df.to_csv(f\"ic50_Matrix_{type}.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get cosine similarity value just for 2 drugs\n",
+    "import numpy\n",
+    "import sklearn \n",
+    "from sklearn.metrics.pairwise import euclidean_distances\n",
+    "\n",
+    "# create a cosine similarity metric for just comparing 2 drugs\n",
+    "meanIntensityMatrix = pd.read_csv(\"Mean_Intensity_Matrix_All_Drugs.csv\").fillna(0)\n",
+    "\n",
+    "# pull drug 1 and drug 2 (columns 1 and 2), which will be series\n",
+    "drug1 = meanIntensityMatrix.iloc[:,1] # column 0 is the gene names!\n",
+    "drug2 = meanIntensityMatrix.iloc[:,2] \n",
+    "# print(f\"drug 1:\\n{drug1.head()}\")\n",
+    "# print(f\"drug 2:\\n{drug2.head()}\")\n",
+    "\n",
+    "# convert the series to numpy arrays (use .to_numpy()) \n",
+    "drug1 = drug1.to_numpy().reshape(1, -1) # reshape to be 2d vectors of rows, not 1d arrays\n",
+    "drug2 = drug2.to_numpy().reshape(1, -1) # 1 row (drug), infer number of columns (# of genes)\n",
+    "# plug those into the cosine_similarity function\n",
+    "euc_similarity_val = euclidean_distances(drug1, drug2)\n",
+    "print(euc_similarity_val)"
+   ]
   }
  ],
  "metadata": {
